--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         java: [ adopt@1.8, adopt@1.11, adopt@1.14 ]
         scala: [ 2.10.7, 2.11.12, 2.12.12, 2.13.3, 0.24.0, 0.25.0-RC2 ]
-    name: build on ${{ matrix.java }}
+    name: build ${{ matrix.java }} / ${{ matrix.scala }}
     steps:
       - uses: actions/checkout@v2
       - name: Cache Ivy
